--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
+    "google-auth-library": "^9.15.0",
     "moment": "^2.30.1",
     "mongoose": "^8.5.2",
     "nodemailer": "^6.9.14",
